--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -1,33 +1,80 @@
 /*не работает пока */
 
 .container{
-    display: flex;
-    flex-direction: column ;
-    gap: 20px;
-    padding: 20px;
-  }
-  .carousel {
-    flex: 1;
-    border: 1px solid rgb(61, 68, 77);
-    padding: 10px;
-    text-align: center;
-    gap: 20px;
-  }
-  .image {
-    max-width: 100%;
-    height: auto;
-  }
-  .editor{
-    flex: 2;
-    border: 1px solid rgb(61, 68, 77);
-    padding: 10px;
-  }
-  .slideForm {
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid rgb(61, 68, 77);
-  }
-  .label {
-    max-width: 500px;
-    word-break: break-word;
-  }
+  display: flex;
+  flex-direction: column ;
+  gap: 20px;
+  padding: 20px;
+  color:white;
+}
+.carousel {
+  flex: 1;
+  border: 1px solid rgb(61, 68, 77);
+  padding: 10px;
+  text-align: center;
+}
+.image {
+  max-width: 100%;
+  max-height: 200px;
+}
+.editor {
+  flex: 2;
+  border: 1px solid rgb(61, 68, 77);
+  padding: 10px;
+}
+.slide-form {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgb(61, 68, 77);
+}
+.label {
+  max-width: 500px;
+  word-break: break-word;
+}
+.input {
+  border: none
+}
+.input:focus {
+  outline: none;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.checkbox {
+  margin-left: 0;
+}
+
+.button {
+  background-color: #151b23;
+  color: white;
+  border: 1px solid rgb(61, 68, 77);
+  padding: 8px 16px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 200ms ease, border-color 200ms ease;
+}
+.button.create {
+  display: flex;
+  margin: auto;
+}
+.button:hover {
+  background-color: #30363d;
+  border-color: #8b949e;
+}
+.button:active {
+  background-color: #161b22;
+}
+.switcher {
+  margin-left: 20px;
+  margin-top: 10px;
+}
+.button-group {
+  gap: 10px;
+  display: inline-flex;
+}
+.form {
+  margin-top: 10px;
+}
